--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ body {
 .header {
   background: var(--primary);
   border-bottom: 4px solid var(--secondary);
-    position: relative;
+  position: relative;
   z-index: 100;
 }
 
@@ -84,7 +84,7 @@ body {
   position: absolute;
   top: 100%;
   left: 0;
-  background: #fff;
+  background: #9c3737;
   min-width: 200px;
   border-radius: 4px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.12);
@@ -95,18 +95,13 @@ body {
 .dropdown-menu li a {
   display: block;
   padding: 0.7rem 1rem;
-  color: #333;
+  color: #ffffff;
   font-weight: 500;
 }
 
 .dropdown-menu li a:hover {
-  background: #f2f2f2;
+  background: #d34d4d;
 }
-
-/* Mostrar dropdown en hover (desktop) */
-/* .nav-item:hover .dropdown-menu {
-  display: block;
-} */
 
 .site-title a {
   color: #fff;
@@ -406,11 +401,20 @@ h3 {
   font-size: 0.9rem;
 }
 
+/* DESKTOP: hover activo */
+@media (min-width: 769px) {
+  .nav-item:hover .dropdown-menu {
+    display: block;
+  }
+}
+
+
 /* RESPONSIVE */
 @media (max-width: 768px) {
   .header-content {
-    flex-direction: column;
-    gap: 1rem;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
   }
 
   .dropdown-menu {
@@ -445,13 +449,30 @@ h3 {
   font-size: 2rem;
   color: #fff;
   cursor: pointer;
+  display: none;
+  align-items: center;
+  margin-left: auto;
 }
+
+.menu-toggle:hover {
+  opacity: 0.8;
+}
+
 
 /* MOBILE */
 @media (max-width: 768px) {
   .menu-toggle {
-    display: block;
+    display: flex;
   }
+
+  .menu-toggle span {
+    width: 24px;
+    height: 2px;
+    background: #fff;
+    display: block;
+    margin: 5px 0;
+  }
+
 
   .nav {
     position: absolute;
@@ -463,6 +484,11 @@ h3 {
     padding: 1rem;
     display: none;
     border-radius: 4px;
+  }
+
+  .nav.active {
+    display: flex;
+    flex-direction: column;
   }
 
   .nav li {
