--- a/css/styles.css
+++ b/css/styles.css
@@ -787,9 +787,10 @@ h3 {
 @media (max-width: 768px) {
 
   /* HEADER */
-  .header-content {
-    flex-direction: column;
-    gap: 1rem;
+    .header-content {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
   }
 
   /* NAV */
