--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,23 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  /* mask-image: url(../img/Icono.jpg);
+  mask-position: center;
+  mask-repeat: no-repeat;
+  mask-size: 50px;
+  animation: lock-reveal 3s ease-in-out forwards; */
 }
+
+/* @keyframes lock-reveal {
+  0% {
+    mask-size: 10px;
+  }
+
+  100% {
+    mask-size: 5000vh;
+  }
+} */
 
 /* overlay oscuro */
 .hero-overlay {
@@ -401,6 +417,36 @@ h3 {
   padding: 1rem 0;
   font-size: 0.9rem;
 }
+.footer-dev {
+  font-size: 0.9rem;
+  color: #cfcfcf;
+  margin-top: 0.5rem;
+}
+
+.footer-dev a {
+  color: #ffffff;
+  font-weight: 500;
+  text-decoration: none;
+  position: relative;
+}
+
+.footer-dev a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 100%;
+  height: 1px;
+  background: currentColor;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.3s ease;
+}
+
+.footer-dev a:hover::after {
+  transform: scaleX(1);
+}
+
 
 /* NAV MOBILE */
 .nav-container {
@@ -725,6 +771,7 @@ h3 {
   .propuesta-grid {
     grid-template-columns: 1fr;
   }
+
   .resource-cards {
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   }
